Fixed a black bar on the bottom that appears on smaller screens

--- a/src/App.css
+++ b/src/App.css
@@ -57,7 +57,8 @@ button:hover:disabled {
     border-color: #ccc;
 }
 
-@media (max-height: 300px) {
+@media screen and (max-width: 995px),
+screen and (max-height: 700px) {
     body.background {
         background-size: 2000px;
     }
